kubernetes/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - jenkins.krugercorp.co.za
    secretName: jenkins-crt
  rules:
  - host: jenkins.krugercorp.co.za
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
